--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "0.0.1",
     "description": "",
     "main": "lib/index.js",
+    "private": "false",
     "scripts": {
         "prepare": "husky install",
         "prebuild": "rimraf lib",
