fix: set public

--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
     "description": "",
     "main": "lib/index.js",
     "private": false,
+    "publishConfig": {
+        "access": "public"
+    },
     "scripts": {
         "prepare": "husky install",
         "prebuild": "rimraf lib",
