--- a/example/package.json
+++ b/example/package.json
@@ -10,7 +10,7 @@
         "@nestjs/config": "^2.0.0",
         "@nestjs/core": "^8.4.4",
         "@nestjs/platform-express": "^8.4.4",
-        "nestjs-redis": "^1.3.1"
+        "@hoangnguyen1247/nestjs-redis": "^1.0.1"
     },
     "devDependencies": {
         "rimraf": "^3.0.2",
